			   XPCE ChangeLog
			   ==============

* FIXED: Text format (string->initialise, <many classes>->format) to
  check for buffer overflows and report gracefully rather than
  uncontrolled after buffer overrun.  Removed the limit altogether
  on all methods where long output is considered mor or less `normal',
  such as string->initialise, string->format, stream->format,
  editor->format, etc.

* ADDED: `prolog_term->equal' to test for Prolog equality on terms.

* ADDED: library(pce_toc): allow for the use of arbitrary graphicals as
  label of nodes.

* FIXED: `text_item->clear' to set the item to modified, so <-selection
  indeed returns ''.

* ADDED: Default binding of Control-Z to undo in editor.

* FIXED: Memory leak in class code_vector.

* PORT: Included some portability issues in unx/process.c, socket handling
  and make version detection for NetBSD 1.5.2.  Contributed by John Towler.
  Incomplete.

* MAINTAIN: Unix Makefile: fixed pl-static target to call xpce dependency

* ADDED: Avoid opening the display during XPCE's initialisation.  This
  allows for XPCE applications without doing graphics.


VERSION 5.1.9, distributed with SWI-Prolog 4.0.10
=================================================

* FIXED: Win32: `Frame<-comfirm' to move/resize already open transient frames.
  Reported by Tolga Konik on the GUI tracer.

* MAINTAIN: Fixed src/FN not to touch the name database it it wasn't changed.

* FIXED: send(file('~/.xpce/Defaults'), exists) to take very long on Windows
  98 and friends: ~/xyz is expanded to c://xyz, which in turn is treated as
  a network path.

* FIXED: `device->erase' to reset the windows focus also the erased graphical
  is a sub-graphical of the focus.  This can cause crashes in applications.

* FIXED: `table_cell->note_mark' for cells in top row or left column.

* FIXED: Colour update in class reporter on ->report: progress, ... 

* FIXED: Focus handling bug opening text_item combobox (for completions).
  Reported by Bob Wielinga.
